--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -10,7 +10,7 @@
 <body>
      <div class="container">
      	<nav class="bg-image clearfix">
-     		<h1 class="h1-name">Miha Wang</h1>
+     		<h1 class="h1-name">Miha Wan</h1>
          	<ul class="list">
          		<li><a href="#home">Home</a></li>
          		<li><a href="#portfolio">Portfolio</a></li>
